# python202510perf

./: 01-Iterations.ipynb  02-builtin_operators.ipynb  06-scientific-python.ipynb  07-decorator-timing.py  07-decorators.ipynb  Readme.md  presentation.excalidraw  requirements.txt
03-OopClassic/: Readme.md  main.py  point.py
03-OopClassic/tests/: __init__.py  test_point.py
04-OopDataclass/: circle.py  coloredpoint.py  main.py  mesurable.py  point.py  polygon.py  shape.py  weightedcoloredpoint.py  weightedpoint.py
04-OopDataclass/model/: circle.py  point.py  shape.py  weightedcoloredpoint.py  weightedpoint.py
04-OopDataclass/tests/model/: test_point.py
05-OopDataclassProtocol/: .gitignore  circle.py  coloredpoint.py  main.py  mesurable.py  point.py  polygon.py  weightedcoloredpoint.py  weightedpoint.py
08-Concurrent-Programming/: ConcurrentProgramming.ipynb  async_downloader.py  parallel_computing.py
09-Packaging-Requirements/: Readme.md  main.py  requirements.txt
09-Packaging-Requirements/model/: __init__.py  circle.py  coloredpoint.py  mesurable.py  point.py  polygon.py  shape.py  weightedpoint.py
10-Packaging-Toml-Poetry/: Readme.md
10-Packaging-Toml-Poetry/geoapp/: .gitignore  pyproject.toml
10-Packaging-Toml-Poetry/geoapp/geoapp/: main.py
10-Packaging-Toml-Poetry/geoapp/geoapp/model/: __init__.py  circle.py  coloredpoint.py  mesurable.py  point.py  polygon.py  shape.py  weightedcoloredpoint.py  weightedpoint.py
10-Packaging-Toml-Poetry/geoapp/tests/model/: test_point.py
